small styling fix
This will remove side scrollbar on bucket

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -17,7 +17,8 @@ nav {
 
 main {
     width: 100vw;
-    height: 100%
+    height: 100%;
+    overflow-x: hidden;
 }
 
 
