--- a/src/components/Bucket/Bucket.scss
+++ b/src/components/Bucket/Bucket.scss
@@ -12,7 +12,7 @@
 }
 
 .bucketContainer {
-    width: 500px;
+    width: 700px;
     // outline: solid green 2px;
     display: flex;
     flex-direction: column;
